--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#delete</h1>
-<p>Find me in app/views/pages/delete.html.erb</p>
+<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+
+<div class = "page delete">
+	<h2>Delete Page</h2>
+
+	<%= form_for(:page, :url => {:action => 'destroy', :id => @page.id}) do |f| %>
+
+		<p>Are you sure you want to permanently delete this page?</p>
+
+		<p class="reference-name"><%= @page.name %></p>
+
+		<div class="form-buttons">
+			<%= submit_tag("Delete Subject") %>
+		</div>
+	<% end %>
+</div>
