--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,8 +1,3 @@
-<% if !flash[:notice].blank? %>
-	<div class="notice">
-		<%= flash[:notice] %>
-	</div>
-<%end%>
 
 <div class="sections index">
 	<h2>Sections</h2>
@@ -22,7 +17,7 @@
 		<tr>
 			<td><%= section.position %></td>
 			<td><%= section.name %></td>
-			<td class="center"><%= section.visible ? 'Yes' : 'No' %></td>
+			<td class="center"><%= status_tag(section.visible) %></td>
 			<td class="actions">
 				<%= link_to("Show", {:action => 'show', :id => section.id}, :class => 'action show') %>
 				<%= link_to("Edit", {:action => 'edit', :id => section.id}, :class => 'action edit') %>
