--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -6,3 +6,8 @@
 </br>
 
 <%= link_to('Hello with parameters', {:action=> 'hello', :page=>5, :id=>20}) %>
+
+<% name = "Blahhh" %><br />
+<%= link_to('Roar', '#', :onclick => "jsRoar('#{name}'); return true;") %>
+
+<%= javascript_tag("jsRoar('#{j(name)}');") %>
