--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,13 +2,11 @@
 <html>
 	<head>
 		<title>Simple CMS | <%= @page_title || "Admin" %> </title>
+		<%= stylesheet_link_tag('application', :media => 'all') %>
 	</head>
 
-		<style>
-		span.status{display: block; width: 10px; height: 10px; margin: 0.25em auto; padding: 0; border: 1px solid #000000;}
-		span.status.true {background: green; color: green;}
-		span.status.false {background: red; color: red;}
-		</style>
+
+	<body>
 
 		<div id="header">
 			<h1>Simple CMS Admin</h1>
